fixed what seems to be one of the last mobile-rendering responsiveness issues-- footer text now centers on small sizes, instead of being left-aligned on one side and right-aligned on the other

--- a/roomlist/static/css/style.css
+++ b/roomlist/static/css/style.css
@@ -29,6 +29,21 @@ a[name] {
 #footer {
   height: 30px;
 }
+
+@media(max-width: 992px) {
+  #footer {
+    text-align: center;
+  }
+}
+
+/* in which we replicate bootstrap's pull-right implementation */
+
+@media(min-width: 992px) {
+  .footer-right {
+    float: right !important;
+  }
+}
+
 .jumboindex {
   background: url(/static/img/North_Section_of_Presidents_Park_Dorms.jpg) no-repeat;
   background-size: cover;
